# wald

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEXT.md  README.md  action.yml  pyproject.toml  spike.py
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md
.github/workflows/: ci.yml  release.yml  wald-demo.yml
corpus/: MANIFEST.json
corpus/clean/: abtest-s11.ipynb  abtest-s12.ipynb  abtest-s13.ipynb  abtest-s14.ipynb  abtest-s21.ipynb  abtest-s22.ipynb  abtest-s23.ipynb  abtest-s24.ipynb  churn-s11.ipynb  churn-s12.ipynb  churn-s13.ipynb  churn-s14.ipynb  churn-s21.ipynb  churn-s22.ipynb  churn-s23.ipynb  churn-s24.ipynb  (+40 more)
docs/: agent-gate.md  fit-before-split-fps.md  temporal-shuffle-evasions.md
evals/: 2026-07-02-eval.json  2026-07-02-eval.md  2026-07-04-dogfood.md  2026-07-04-eval.json  2026-07-04-eval.md  2026-07-05-eval.json  2026-07-05-eval.md  2026-07-07-dogfood-wide.md  2026-07-08-llm-dogfood-subscription.md  2026-07-09-llm-eval-dev-subscription-indicative.json  2026-07-09-llm-eval-dev-subscription-indicative.md  real-flaws.tsv
examples/: leaky.ipynb  leaky.py
plans/: g2g3-runbook.md  m2.md  v1-completion.md
posts/: 2026-07-04-i-mutation-tested-statistical-malpractice.md
tests/: test_cli.py  test_dataflow.py  test_detect.py  test_execute.py  test_fuse.py  test_gates.py  test_ingest.py  test_llm.py  test_mutations.py  test_narrative.py  test_narrative_eval.py  test_packaging.py  test_report.py  test_robustness.py  test_taxonomy.py  test_verifier.py
wald/: cli.py  corpus.py  dataflow.py  detect.py  eval.py  execute.py  fuse.py  ingest.py  llm.py  mutate.py  narrative.py  report.py  verifier.py
(+227 files in other folders)
